--- a/ethics-primer.html
+++ b/ethics-primer.html
@@ -74,8 +74,8 @@
         moral responsibilities of computer scientists and others who build these systems?</p>
       <iframe class="last-image"src="img/ethics-primer/short1.pdf" width="100%" height="700px;"></iframe>
       <p>In the context of a project that uses location to track infection rates of particular diseases,
-        to which extent do you agree or disagree with:<br>"There is no entitlement to privacy in an
-        increasingly connected world."</p>
+        to which extent do you agree or disagree with the statement:
+        <br>"There is no entitlement to privacy in an increasingly connected world."</p>
       <iframe class="last-image"src="img/ethics-primer/short2.pdf" width="100%" height="700px;"></iframe>
     </div>
   </div>
