--- a/sleep-tracker.html
+++ b/sleep-tracker.html
@@ -31,7 +31,7 @@
     <div id="title-banner">
       <div class="headline">
         <div class="text">
-          <h1>Sleep Tracker Redesign</h1>
+          <h1>Visualizing Sleep Data</h1>
           <p>Altering information visualization influence through sleep feedback.</p>
         </div>
       </div>
