--- a/work.html
+++ b/work.html
@@ -90,7 +90,7 @@
             <img class="uiexp" src="img/sleep-exp.png">
           </div>
           <div class="sleep-text">
-            <h1 class="experience-company">Sleep Tracker Redesign</h3>
+            <h1 class="experience-company">Visualizing Sleep Data</h3>
             <h2 class="experience-subheading">Course Project | Designer</h1>
             <h3 class="experience-description">Altering information visualization influence through sleep feedback.</h3>
             <button id="clickable"class="sleep-button" type="button" onclick="window.location.href='sleep-tracker.html'">View Concept</button>
