--- a/aisc.html
+++ b/aisc.html
@@ -55,7 +55,7 @@
     </div>
     <div class="main-body">
       <h1>Introduction</h1>
-      <p>The Artificial Intelligence Student Collective is a child organization of <a href="https://www.humansforai.com">Humans for
+      <p>The Artificial Intelligence Student Collective is a child organization of <a target="_blank" href="https://www.humansforai.com">Humans for
         AI</a> catered towards high school and college students. It seeks to provide ethical and
         accessible AI literacy through pre-professional programs and events, spanning from
         courses at the high school-level, to symposiums at the college-level.</p>
@@ -63,7 +63,7 @@
       <p>One of my friends, Neil Damle, has been working with Humans for AI for the past few years,
         and wanted to extend it to branches within universities, as well as surrounding high schools;
         he worked with Anirudh Murugesan to found AISC branches at the University of California, San Diego,
-        as well as the University of California, Davis. Neil and Ani enlisted my help for the global and San Diego
+        as well as the University of California, Davis. Neil and Ani enlisted my help for the national and San Diego
         branch, but I’ve also been working with Judy Yang from UC Davis to gauge direction!</p>
       <h1>Logo</h1>
       <h2>Iterations</h2>
