--- a/dormit.html
+++ b/dormit.html
@@ -50,7 +50,7 @@
         San Diego, specializing in speed and late-night avalibility. </p>
       <h2>Collaboration</h2>
       <p>Because Dormit is a start-up, a lot of the roles did end up overlapping, but my main
-        collaborator on visual design was Sunay Bargotra; other members that had given input included
+        collaborators on visual design were Sunay Bargotra and Catherine Dinh; other members that had given input included
         the UI/UX Designers that I shadowed for a bit: Cole Franklin, Emily Ton, and Jennifer Vo,
         as well as founders Chaninder Rishi, Eric Cherny, and Kishan Pansuria.</p>
       <h2>Experience Recap</h2>
@@ -108,7 +108,7 @@
   <footer>
     <p class=footer-chat>let's chat!</p>
     <a href = "mailto: fiona_liu1@brown.com"><i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i></a>
-    <a href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
+    <a target="_blank" href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
     <p class="footer-name">designed by Fiona Liu | 2022</p>
 </footer>
 </html>
