--- a/ethics-primer.html
+++ b/ethics-primer.html
@@ -83,7 +83,7 @@
   <footer>
     <p class=footer-chat>let's chat!</p>
     <a href = "mailto: fiona_liu1@brown.com"><i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i></a>
-    <a href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
+    <a target="_blank" href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
     <p class="footer-name">designed by Fiona Liu | 2022</p>
 </footer>
 </html>
