--- a/sleep-tracker.html
+++ b/sleep-tracker.html
@@ -61,7 +61,7 @@
         aspects of the same information, but was intended for the same audience and context/format. </p>
       <h1>Design</h1>
       <h2>Insipration</h2>
-      <p>I found that a daily place where information visualization was extremely prevalent were health-tracking apps.
+      <p>I found that a daily place where information visualization was extremely prevalent was health-tracking apps.
         The recent increased emphasis on health made me wonder how our trust and habits can be dictated by the way that
         these apps visualize that information, and I was inspired by Fitbit’s app, which I used to use regularly.</p>
       <p>Their sleep page is as follows, telling you all about how long you slept, how long you spent in each
@@ -84,7 +84,7 @@
       </div>
       <h2>Scold</h2>
       <p>This prototype juxtaposed hours of sleep to executive function to indicate lower function
-        with less sleep, as drawn from <a href="https://www.nature.com/articles/s42003-022-03123-3">this study</a>.</p>
+        with less sleep, as drawn from <a target="_blank" href="https://www.nature.com/articles/s42003-022-03123-3">this study</a>.</p>
       <div class="row last-image">
         <img src="img/sleep-tracker/scold1.png" alt="">
         <img src="img/sleep-tracker/scold2.png" alt="">
@@ -101,7 +101,7 @@
   <footer>
     <p class=footer-chat>let's chat!</p>
     <a href = "mailto: fiona_liu1@brown.com"><i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i></a>
-    <a href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
+    <a target="_blank" href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
     <p class="footer-name">designed by Fiona Liu | 2022</p>
 </footer>
 </html>
