--- a/work.html
+++ b/work.html
@@ -116,7 +116,7 @@
             <h1 class="experience-company">Dormit</h3>
             <h2 class="experience-subheading">UCSD Startup | Logo, Flyer Designer</h1>
             <h3 class="experience-description">Bringing late night food delivery to the heart of the UCSD campus.</h3>
-            <button id="clickable" class="dormit-button" type="button" onclick="window.location.href='dormit.html'">View Project</button>
+            <button id="clickable" class="dormit-button" type="button" onclick="window.location.href='dormit.html', '_blank'">View Project</button>
           </div>
         </div>
         <div class="exp">
