--- a/zoom.html
+++ b/zoom.html
@@ -56,7 +56,7 @@
     <div class="case-study">
       <h1>Course Introduction + Prefaces</h1>
       <p>This project was the fourth and final undertaking of the course <b>DSGN 1: Design of Everyday Things</b>, taught by Professor Michael Meyers at the University of California, San Diego.
-Centered around UCSD’s own Design Lab Director Don Norman’s <a href="https://mitpress.mit.edu/9780262640374/the-design-of-everyday-things/">The Design of Everyday Things</a>, the course sought to challenge its students through
+Centered around UCSD’s own Design Lab Director Don Norman’s <a target="_blank" href="https://mitpress.mit.edu/9780262640374/the-design-of-everyday-things/">The Design of Everyday Things</a>, the course sought to challenge its students through
 applying cognitive science principles to the design of both simple and complex technology. Students were introduced to foundational concepts
 such as affordances, constraints, mappings, and conceptual models, and asked to apply their understanding of these concepts, along
 with their observational and design skills, through a sequence of four group projects that reimagined everything from sparkwheel lighters to gear shifts to video chat interfaces.
@@ -70,16 +70,16 @@ with their observational and design skills, through a sequence of four group pro
         “gain additional experience seeing as a designer by identifying problems with the design of
         a common everyday object, apply the ideas of conceptual models and gulfs of execution
         and evaluation in your analysis of the object, and start to develop experience with feeding
-        the ideation process” (Projects <a href="https://docs.google.com/document/d/1dq1oe_SUes5VuQznlMnYbzSozVNBg5VqVPoj2zijV5s/edit?usp=sharing">1</a>
-         and <a href="https://docs.google.com/document/d/1EP_iqBatE0tW7ObFYBePgts10LRH01Pszo436aAJT5A/edit?usp=sharing">2</a>), and designing for error by
+        the ideation process” (Projects <a target="_blank" href="https://docs.google.com/document/d/1dq1oe_SUes5VuQznlMnYbzSozVNBg5VqVPoj2zijV5s/edit?usp=sharing">1</a>
+         and <a target="_blank" href="https://docs.google.com/document/d/1EP_iqBatE0tW7ObFYBePgts10LRH01Pszo436aAJT5A/edit?usp=sharing">2</a>), and designing for error by
         “reducing the opportunities to make errors”, “accepting that people will make errors and providing
-        ways to mitigate their impact and recover from them” (<a href="https://docs.google.com/document/d/1omg3it6Y9Tqp0vduFeoGwbR39gQgJINosXBI6-QXyEM/edit?usp=sharing">Project 3</a>).
+        ways to mitigate their impact and recover from them” (<a target="_blank" href="https://docs.google.com/document/d/1omg3it6Y9Tqp0vduFeoGwbR39gQgJINosXBI6-QXyEM/edit?usp=sharing">Project 3</a>).
       </p>
       <p>Essentially, we were tasked to make improvements to an existing digital or physical interface that we saw fit.<br>
       </p>
       <h2>Collaboration</h2>
       <p>I had a really great time working with Janzen Molina, Rajvir Logani, Shihan Gong, Sunay Bargotra, and Johnathan Tinajero
-        on this project, and our original write-up submission can be found <a href="https://docs.google.com/document/d/1cF1ULnYHJgvkF7I8z9CAepS1awFnxYDaHfZWUiF4yhU/edit?usp=sharing">here</a>.
+        on this project, and our original write-up submission can be found <a target="_blank" href="https://docs.google.com/document/d/1cF1ULnYHJgvkF7I8z9CAepS1awFnxYDaHfZWUiF4yhU/edit?usp=sharing">here</a>.
         Although I will be going into greater detail on my role and contributions within this project,
         this case study will draw upon group findings and could not have been possible without them!
       </p>
@@ -91,7 +91,7 @@ with their observational and design skills, through a sequence of four group pro
         physical redesigns (take a look at our previous physical redesigns <a href="play.html#dsgn1">here</a>!)
       </p>
       <img src="img/zoom/mindmap.png" alt="" id="mindmap">
-      <a href="https://miro.com/app/board/uXjVOMK45uU=/?share_link_id=833394764671" id="mindmap-text">View our mindmap!</a>
+      <a target="_blank" href="https://miro.com/app/board/uXjVOMK45uU=/?share_link_id=833394764671" id="mindmap-text">View our mindmap!</a>
       <h2><br>Landing on a Design Issue and Preliminary User Research</h2>
       <p>We landed on two options that were both familiar to us as students and offered a narrow enough
         scope such that we could really hone in on individual features: <b>Zoom</b>, a widely used video
@@ -139,7 +139,7 @@ meaning our user research down the road spanned a greater audience.
        <p>As mentioned, we had to conduct two stages of interviews, as our initial
          scope ended up being too broad. I’ll mainly be explaining the questions from
          Stage 2 because those were the finalized ones used for data collection on the chat,
-         but Stage 1 Questions can be found <a href="https://docs.google.com/document/d/1HpL9zAA591KVQvtOpyFdQ07ZHmkHTZGh7kwjZHUqezw/edit?usp=sharing">here</a>. We included General Questions, Task-Based Questions,
+         but Stage 1 Questions can be found <a target="_blank" href="https://docs.google.com/document/d/1HpL9zAA591KVQvtOpyFdQ07ZHmkHTZGh7kwjZHUqezw/edit?usp=sharing">here</a>. We included General Questions, Task-Based Questions,
          and Post-Task Questions. While the interviewee was on call, we asked them to show us their
          screen and actions using another device, and we recorded their answers on a Google Form, following a master-apprentice model.
        </p>
@@ -153,12 +153,12 @@ meaning our user research down the road spanned a greater audience.
        </p>
        <h2>Stage 2 Chat Interview Questions</h2>
        <img src="img/zoom/stage2qs.png" alt="" id="stage2qs">
-       <p>We interviewed participants and recorded them on this form: <a href="https://forms.gle/vPuu8yUijCw1akWm7">Interview Form</a></p>
+       <p>We interviewed participants and recorded them on this form: <a target="_blank" target="_blank" href="https://forms.gle/vPuu8yUijCw1akWm7">Interview Form</a></p>
        <h2>Raw Data</h2>
-       <p><a href="https://docs.google.com/document/d/1XVyHNlaM3Ch_P4R673wQ5aS7F3wxXeXZWS2khktq9n8/edit?usp=sharing">Group Draft Interview Questions</a><br>Our start-up draft questions before we create the actual interview form<br><br>
-         <a href="https://docs.google.com/forms/d/1W5P9MV5qUTBcgzj8CJAh0VudrA9tQA9nnOpX_64_4DQ/edit">Final Project Interview #1 Google Form</a><br>Questions that focused on all communication functions of Zoom<br><br>
-         <a href="https://docs.google.com/forms/d/1W5P9MV5qUTBcgzj8CJAh0VudrA9tQA9nnOpX_64_4DQ/edit">Final Project Interview #2 Google Form</a><br>Fixed interview questions used for interviews<br><br>
-         <a href="https://docs.google.com/spreadsheets/d/1-P6zRMImYbeLLXHDc5Iy9mViqoBeSDhEjuM6D0eBHhE/edit?usp=sharing">Zoom User Research Responses</a><br>Final Google Sheet collected from interviews and used to complete analysis<br><br>
+       <p><a target="_blank" href="https://docs.google.com/document/d/1XVyHNlaM3Ch_P4R673wQ5aS7F3wxXeXZWS2khktq9n8/edit?usp=sharing">Group Draft Interview Questions</a><br>Our start-up draft questions before we create the actual interview form<br><br>
+         <a target="_blank" href="https://docs.google.com/forms/d/1W5P9MV5qUTBcgzj8CJAh0VudrA9tQA9nnOpX_64_4DQ/edit">Final Project Interview #1 Google Form</a><br>Questions that focused on all communication functions of Zoom<br><br>
+         <a target="_blank" href="https://docs.google.com/forms/d/1W5P9MV5qUTBcgzj8CJAh0VudrA9tQA9nnOpX_64_4DQ/edit">Final Project Interview #2 Google Form</a><br>Fixed interview questions used for interviews<br><br>
+         <a target="_blank" href="https://docs.google.com/spreadsheets/d/1-P6zRMImYbeLLXHDc5Iy9mViqoBeSDhEjuM6D0eBHhE/edit?usp=sharing">Zoom User Research Responses</a><br>Final Google Sheet collected from interviews and used to complete analysis<br><br>
        </p>
        <h1>Problems + Trends</h1>
        <h2>Hidden Affordances within Chat Navigation</h2>
@@ -418,7 +418,7 @@ meaning our user research down the road spanned a greater audience.
   <footer>
     <p class=footer-chat>let's chat!</p>
     <a href = "mailto: fiona_liu1@brown.com"><i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i></a>
-    <a href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
+    <a target="_blank" href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
     <p class="footer-name">designed by Fiona Liu | 2022</p>
 </footer>
 </html>
