--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3>Hi, I'm Fiona, an</h3>
             <h1><span class="everyday">eve•ry•day</span> <span class="designer">de•sign•er</span></h1>
             <h5>[ˈevrēˌdā  dəˈzīnər]</h5>
-            <h4>someone who believes design is<br><span id="highlight">life-based</span> and <span id="highlight">ethically-oriented.</span></h4>
+            <h4>someone who believes design is <span id="highlight">life-based</span> and <span id="highlight">ethically-oriented.</span></h4>
       </div>
 
       <div class="image">
@@ -168,7 +168,7 @@
           <div class="square-img">
             <img class="uiexp" src="img/ui-exp1.png">
           </div>
-          <div class="wordrive-text">
+          <div class="text">
             <h1 class="experience-company">Wordrive</h3>
             <h2 class="experience-subheading">Passion Project | Designer, Researcher</h1>
             <h3 class="experience-description">Making word storage and definition referencing easier for all readers alike.</h3>
@@ -179,7 +179,7 @@
           <div class="square-img">
             <img class="uiexp" src="img/ui-exp2.png">
           </div>
-          <div class="zoom-text">
+          <div class="text">
             <h1 class="experience-company">Zoom Redesign</h3>
             <h2 class="experience-subheading">Course Project | Designer, Researcher</h1>
             <h3 class="experience-description">Reinventing written communication on videotelephony platforms.</h3>
@@ -190,7 +190,7 @@
           <div class="square-img">
             <img class="uiexp" src="img/default-exp.png">
           </div>
-          <div class="dxd-text">
+          <div class="text">
             <h1 class="experience-company">DXD</h3>
             <h2 class="experience-subheading">Passion Project | Designer, Researcher</h1>
             <h3 class="experience-description">Connecting designers and developers for a seamless handoff from the seed.</h3>
@@ -201,7 +201,7 @@
           <div class="square-img">
             <img class="uiexp" src="img/ethics-exp.png">
           </div>
-          <div class="ethics-text">
+          <div class="text">
             <h1 class="experience-company">Ethics Primer</h3>
             <h2 class="experience-subheading">Course Project | Designer, Researcher</h1>
             <h3 class="experience-description">Evaluating ethical implications of your digital consumption - on your terms.</h3>
@@ -212,7 +212,7 @@
           <div class="square-img">
             <img class="uiexp" src="img/sleep-exp.png">
           </div>
-          <div class="sleep-text">
+          <div class="text">
             <h1 class="experience-company">Visualizing Sleep Data</h3>
             <h2 class="experience-subheading">Course Project | Designer</h1>
             <h3 class="experience-description">Altering information visualization influence through sleep feedback.</h3>
@@ -232,10 +232,10 @@
 
       <div id="experience">
         <div class="exp">
-          <div class="dormit-img">
+          <div class="square-img">
             <img class="visexp1" src="img/vis-exp1.png">
           </div>
-          <div class="dormit-text">
+          <div class="text">
             <h1 class="experience-company">Dormit</h3>
             <h2 class="experience-subheading">UCSD Startup | Logo, Flyer Designer</h1>
             <h3 class="experience-description">Bringing late night food delivery to the heart of the UCSD campus.</h3>
@@ -243,10 +243,10 @@
           </div>
         </div>
         <div class="exp">
-          <div class="aisc-img">
-            <img class="visexp2" src="img/aisc-exp.png">
+          <div class="square-img">
+            <img class="visexp1" src="img/aisc-exp.png">
           </div>
-          <div class="aisc-text">
+          <div class="text">
             <h1 class="experience-company">AI Student Collective</h3>
             <h2 class="experience-subheading">Non-Profit  | Logo, Flyer, Branding</h1>
             <h3 class="experience-description">Providing accessible AI literacy and ethical experiences for the future of our workforce.</h3>
@@ -254,10 +254,10 @@
           </div>
         </div>
         <div class="exp">
-          <div class="sacf-img">
-            <img class="visexp3" src="img/sacf.png">
+          <div class="square-img">
+            <img class="visexp1" src="img/sacf.png">
           </div>
-          <div class="sacf-text">
+          <div class="text">
             <h1 class="experience-company">Student-Athlete Community Foundation</h3>
             <h2 class="experience-subheading">Non-Profit | Logo, Flyer, Branding</h1>
             <h3 class="experience-description">Giving back to the athletics community through a shared sense of service.</h3>
