--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@
       <div id="experience" >
         <div class="exp">
           <div class="square-img">
+            <img class="uiexp" src="img/potluck.png">
+          </div>
+          <div class="text">
+            <h1 class="experience-company">Potluck</h3>
+            <h2 class="experience-subheading">Course Project | Designer, Researcher</h1>
+            <h3 class="experience-description">A pantry of recommendations from your closest friends and family.</h3>
+            <button id="clickable"class="potluck-button" type="button" onclick="window.location.href='https://docs.google.com/document/d/1rM7uPRI6re9InwLGHxRqyrvap-FL3Svj09j6VpT7O2Q/edit?usp=sharing'">View Progress</button>
+          </div>
+        </div>
+        <div class="exp">
+          <div class="square-img">
             <img class="uiexp" src="img/ui-exp1.png">
           </div>
           <div class="text">
@@ -184,17 +195,6 @@
             <h2 class="experience-subheading">Course Project | Designer, Researcher</h1>
             <h3 class="experience-description">Reinventing written communication on videotelephony platforms.</h3>
             <button id="clickable"class="zoom-button" type="button" onclick="window.location.href='zoom.html'">View Case Study</button>
-          </div>
-        </div>
-        <div class="exp" id="dxd">
-          <div class="square-img">
-            <img class="uiexp" src="img/default-exp.png">
-          </div>
-          <div class="text">
-            <h1 class="experience-company">DXD</h3>
-            <h2 class="experience-subheading">Passion Project | Designer, Researcher</h1>
-            <h3 class="experience-description">Connecting designers and developers for a seamless handoff from the seed.</h3>
-            <button class="dxd-button" type="button">Coming Soon!</button>
           </div>
         </div>
         <div class="exp" id="ethics">
@@ -217,6 +217,17 @@
             <h2 class="experience-subheading">Course Project | Designer</h1>
             <h3 class="experience-description">Altering information visualization influence through sleep feedback.</h3>
             <button id="clickable"class="sleep-button" type="button" onclick="window.location.href='sleep-tracker.html'">View Concept</button>
+          </div>
+        </div>
+        <div class="exp" id="dxd">
+          <div class="square-img">
+            <img class="uiexp" src="img/default-exp.png">
+          </div>
+          <div class="text">
+            <h1 class="experience-company">DXD</h3>
+            <h2 class="experience-subheading">Passion Project | Designer, Researcher</h1>
+            <h3 class="experience-description">Connecting designers and developers for a seamless handoff from the seed.</h3>
+            <button class="dxd-button" type="button">Coming Soon!</button>
           </div>
         </div>
       </div>
