--- a/potluck.html
+++ b/potluck.html
@@ -95,7 +95,38 @@
       <img src="img/potluck/wireframe2.png" alt="" class="sketch">
       <img src="img/potluck/wireframe4.png" alt="" class="sketch">
       <h1>Visual Style Guide</h1>
+      <div class="container">
+        <div class="content">
+            <!-- The content which is placed at the center of the carousel -->
+            <div class="slideshow">
+                <!-- carousel control buttons -->
+                <button class="slide-btn slide-btn-1"></button>
+                <button class="slide-btn slide-btn-2"></button>
+                <button class="slide-btn slide-btn-3"></button>
+                <button class="slide-btn slide-btn-4"></button>
+                <!-- carousel wrapper which contains all images -->
+                <div class="slideshow-wrapper">
+                    <div class="slide">
+                        <img class="slide-img"
+                            src="img/potluck/PotluckVD1.1.png">
+                    </div>
+                    <div class="slide">
+                        <img class="slide-img"
+                            src="img/potluck/PotluckVD2.1.png">
+                    </div>
+                    <div class="slide">
+                        <img class="slide-img" src="img/potluck/PotluckVD3.1.png">
+                    </div>
+                    <div class="slide">
+                        <img class="slide-img" src="img/potluck/PotluckVD4.1.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+
       <div class="style">
+        <!--
         <div class="style-row">
           <img src="img/potluck/PotluckVD1.1.png" alt="">
           <img src="img/potluck/PotluckVD2.1.png" alt="">
@@ -104,6 +135,7 @@
           <img src="img/potluck/PotluckVD3.1.png" alt="">
           <img src="img/potluck/PotluckVD4.1.png" alt="">
         </div>
+        -->
         <img src="img/potluck/style-text.png" alt="">
       </div>
 
