--- a/work.html
+++ b/work.html
@@ -43,12 +43,23 @@
         <div id="experience" >
           <div class="exp">
             <div class="square-img">
+              <img class="uiexp" src="img/epic.png">
+            </div>
+            <div class="text">
+              <h1 class="experience-company">Epic Systems</h3>
+              <h2 class="experience-subheading">Summer 2023 Internship | UX Design Intern</h1>
+              <h3 class="experience-description">Streamlining the Telehealth preparation process for a more joyful patient experience.</h3>
+              <button id="" class="epic-button" type="button" onclick="window.location.href='potluck.html'">Coming Soon!</button>
+            </div>
+          </div>
+          <div class="exp">
+            <div class="square-img">
               <img class="uiexp" src="img/potluck.png">
             </div>
             <div class="text">
               <h1 class="experience-company">Potluck</h3>
-              <h2 class="experience-subheading">Passion Project | Designer, Researcher</h1>
-              <h3 class="experience-description">The place to thrift, sift and gift away your unused materials in the Providence community.</h3>
+              <h2 class="experience-subheading">Course Project | Designer, Researcher</h1>
+              <h3 class="experience-description">A pantry of recommendations from your closest friends and family.</h3>
               <button id="clickable"class="potluck-button" type="button" onclick="window.location.href='potluck.html'">View Project</button>
             </div>
           </div>
@@ -58,9 +69,9 @@
             </div>
             <div class="text">
               <h1 class="experience-company">Okra</h3>
-              <h2 class="experience-subheading">Course Project | Designer, Researcher</h1>
-              <h3 class="experience-description">A pantry of recommendations from your closest friends and family.</h3>
-              <button id="clickable"class="okra-button" type="button" onclick="window.location.href='https://tinyurl.com/fiona-okra'">Take a peek!</button>
+              <h2 class="experience-subheading">Passion Project | Designer, Researcher</h1>
+              <h3 class="experience-description">The place to thrift, sift and gift away your unused materials in the Providence community.</h3>
+              <button id="clickable"class="okra-button" type="button" onclick="window.location.href='https://www.figma.com/file/Hn0EwBOGWBjr0LPWSmUv6G/Fionas-Copy-of-Waste-Management?type=design&node-id=1%3A4&t=sQCuxNpLxZmTvdnv-1'">Take a Peek!</button>
             </div>
           </div>
           <div class="exp">
@@ -153,8 +164,8 @@
           </div>
         </div>
         <div class="exp">
-          <div class="square-img">
-            <img class="visexp1" src="img/aisc-exp.png">
+          <div class="aisc-square">
+            <img class="aisc-img" src="img/aisc-exp.png">
           </div>
           <div class="text">
             <h1 class="experience-company">AI Student Collective</h3>
