--- a/knot.html
+++ b/knot.html
@@ -44,6 +44,10 @@
         <div class="info-column">
           <h2 class="info-h2">Role</h2>
           <p>User research, sketching, wireframing, prototyping, user-testing</p>
+          <div class="identity">
+            <img class='fiona-sticker' src="img/knot/fiona.png" alt="">
+            <h3 class="contribution">*this will denote my specific contributions</h3>
+          </div>
         </div>
         <div class="info-column">
           <h2 class="info-h2">Timeline</h2>
@@ -71,6 +75,8 @@
       <h4>What contributes to the experience of living with a roommate?</h4>
       <p>We conducted interviews and surveys on young adults in college to find out what some of their living preferences are.
       </p>
+      <img class="research" src="img/knot/research.png" alt="">
+      <!--
       <div class="research">
         <div class="research-row">
           <div class="research-text">
@@ -95,9 +101,14 @@
           <img src="img/knot/incompatibilities.png" alt="">
         </div>
       </div>
+    -->
       <h2>Problem Space</h2>
       <img class='problem' src="img/knot/problem.png" alt="">
-      <h1>Personas</h1>
+      <div class="header">
+        <h1>Personas</h1>
+        <img class='fiona-sticker' src="img/knot/fiona.png" alt="">
+      </div>
+
       <p>To further understand the user base, we created personas representing both those
         who may benefit from the platform in an <b id='green'>emotionally-relieving</b> way and those who may
         simply benefit from it <b id='pink'>organizationally</b>.
@@ -139,15 +150,54 @@
         <img src="img/potluck/style-text.png" alt="">
       </div>
 -->
+<h1>Visual Style Guide</h1>
+<div class="container">
+  <div class="content">
+      <!-- The content which is placed at the center of the carousel -->
+      <div class="slideshow">
+          <!-- carousel control buttons -->
+          <button class="slide-btn slide-btn-1"></button>
+          <button class="slide-btn slide-btn-2"></button>
+          <button class="slide-btn slide-btn-3"></button>
+          <!-- carousel wrapper which contains all images -->
+          <div class="slideshow-wrapper">
+              <div class="slide">
+                  <img class="slide-img"
+                      src=
+"img/knot/style1.png">
+              </div>
+              <div class="slide">
+                  <img class="slide-img"
+                      src=
+"img/knot/style2.png">
+              </div>
+              <div class="slide">
+                  <img class="slide-img" src=
+"img/knot/style3.png">
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+<p>Knot’s main goal is making our users feel comfortable, which meant it was imperative
+  that our style was friendly - so, meet our little mascot! It’s a logo of two roommates joined
+  together, but it’s also the little character that asks you for a request; it takes some of the pressure off
+  receiving an ambiguously-toned text, and incorporates an air of approachability.</p>
+
+
       <h1>Hi-Fi</h1>
       <h2>Mockups</h2>
       <img src="img/knot/hifi1.png" alt="" class="sketch">
       <img src="img/knot/hifi2.png" alt="" class="sketch">
 
-      <h2>Prototype I</h2>
+
+      <div class="header">
+        <h2>Prototype I</h2>
+        <img class='fiona-sticker' src="img/knot/fiona.png" alt="">
+      </div>
       <div class="demo">
         <div class="">
-          <iframe src="https://drive.google.com/file/d/1N9lnYWJCRpXhzUZo_y4NF-7QYHt1VHki/view" width="640" height="480" allow="autoplay"></iframe>
+          <iframe src="https://drive.google.com/file/d/1N9lnYWJCRpXhzUZo_y4NF-7QYHt1VHki/preview" width="640" height="480" allow="autoplay"></iframe>
         </div>
         <!--
         <div class="">
@@ -216,13 +266,21 @@
       </div>
       <h1>Final Prototype</h1>
       <div class="final-div">
-        <h4 class='final'>Demo</h4>
+        <div class="">
+          <h4 class='final'>Demo</h4>
+          <img class='fiona-sticker' src="img/knot/fiona.png" alt="">
+        </div>
         <iframe src="https://drive.google.com/file/d/1C6rajC4SoZyzugWw9QT5tOr2V6F8J8EZ/preview" width="640" height="480" allow="autoplay"></iframe>
       </div>
       <div class="proto">
-        <p>Prototype</p>
+        <p class='proto-p'>Prototype</p>
       </div>
       <iframe class='figma' style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1000" height="563" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FL1aOqgPhoqfXbMhWbPmYGW%2FProject-2---Roommate-Communication-(Final-Personal-Copy)%3Fpage-id%3D728%253A48318%26node-id%3D817-12384%26viewport%3D478%252C333%252C0.02%26scaling%3Dscale-down%26starting-point-node-id%3D817%253A12384" allowfullscreen></iframe>
+        <h2>Key Features</h2>
+        <div class="header">
+          <img class='fiona-sticker' src="img/knot/fiona.png" alt="">
+          <h4 class='hsub'>*cleaned up all the screens</h4>
+        </div>
       <div class="final-img">
         <img src="img/knot/final1.png" alt="" class="sketch">
         <img src="img/knot/final2.png" alt="" class="sketch">
@@ -233,7 +291,7 @@
 
       <h1>Reflection</h1>
       <h2>Main Takeaways</h2>
-      <p><b>Take your time with the foundations</b>: We were really eager to start, but we skimped out on some of the fundamental ground-layings, and we struggled without a clear user flow during the prototyping stage as a result.<br>
+      <p><b>Take your time with the foundations</b>: We were really eager to start, but we skimped out on some of the fundamental ground-layings such as a clear user flow, which led to confusion during the prototyping stage as a result.<br>
 <b>The more the merrier</b>: Working in a team can be difficult to coordinate sometimes, but a huge pro is it showed me how critical proliferation is during the iteration stage. Everyone brought really great ideas to the table, and it helped to have options to choose from!</p>
         <h2>Future Work & Implications</h2>
       <p>This project was moreso about teamwork for me than the product. I’d been working on solo projects for a while, so it was really nice to have support from other designers as a change of pace. I was able to get direct feedback and find collaborative compromises, and I had a network to bounce ideas off of. Something I would likely do differently, though, is organization; because we had this network, we had a lot of ideas that were bouncing around, and we struggled to tackle big tasks together; instead, I would probably break it down into a layered approach so that there aren’t clearly segregated styles between screens or flows.</p>
