--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <h1 class="experience-company">Epic Systems</h3>
             <h2 class="experience-subheading">Summer 2023 Internship | UX Design Intern</h1>
             <h3 class="experience-description">Streamlining the Telehealth preparation process for a more joyful patient experience.</h3>
-            <button id="" class="epic-button" type="button" onclick="window.location.href='potluck.html'">Coming Soon!</button>
+            <button id="clickable" class="epic-button" type="button" onclick="window.location.href='epic.html'">View Project</button>
           </div>
         </div>
         <div class="exp">
